# interactive-seg-backend

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
bench/: bench.py  bench_weka_apply.bsh  bench_weka_feats.bsh
bench/data/: labels_rle.txt
examples/: basic_example.ipynb  classifier_choice.ipynb  expertseg.ipynb  expertseg.py  gpu_usage.ipynb  modal_filter_vs_CRF.ipynb  more_feature_functions.ipynb
interactive_seg_backend/: __init__.py  core.py  main.py  utils.py
interactive_seg_backend/classifiers/: __init__.py  base.py  sklearn_based.py  xgb.py
interactive_seg_backend/configs/: __init__.py  confg.py  config.py  types.py
interactive_seg_backend/configs/examples/: default.json
interactive_seg_backend/extensions/: __init__.py  autocontext.py  crf.py  expertseg.py  hydra.py
interactive_seg_backend/features/: __init__.py  gpu_utils.py  multiscale_classical_cpu.py  multiscale_classical_gpu.py
interactive_seg_backend/file_handling/: __init__.py  file_handling.py
interactive_seg_backend/processing/: __init__.py  postprocess.py  preprocess.py
tests/: conftest.py  test_classifiers.py  test_core.py  test_extensions.py  test_features.py  test_processing.py  test_rgb_and_gpu.py  test_rgb_gpu.py  visualise.py
tests/data/: 0_labels.tif  1.tif  1_ground_truth.tif  1_labels.tif  3.tif  3_labels.tif  rgb.tif  rgb_labels.tif
