[build-system]
requires = ["setuptools>=61.0", "wheel"]

[tool.setuptools.packages]
find = { exclude= ["apply*"] }

[project]
name = "interactive_seg_backend"
version = "0.0.2"
authors = [
  { name="Ronan Docherty", email="ronan.docherty18@imperial.ac.uk"}
]
description = "Interactive segmentation backend: featurisers, classifiers, I/O etc."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=2.3.0",
  "scikit-image>=0.20",
  "scikit-learn>=1.5.1",
  "pillow>=10.0.0",
  "skops>=0.11.0",
  "xgboost>=3.0.5",
  "tifffile",
  "setuptools",
  "pydantic>=2.12.5",
  "pywavelets>=1.9.0",
]

[project.optional-dependencies]
gpu = [
  "torch>=2.5",
  "torchvision>=0.20.1",
  "cupy-cuda12x>=13.0.0"
]
lint = [
  "mypy>=1.2.0",
  "mypy-extensions>=1.0.0",
  "ruff>=0.9.0"
]
test = [
  "pytest>=8.3.0",
]

[project.urls]
"Homepage" = "https://github.com/tldr-group/interactive-seg-backend"
"Bug Tracker" = "https://github.com/tldr-group/interactive-seg-backend/issues"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true          # everything else comes from PyPI

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true         # only packages explicitly pinned to this index
